--- a/backend/AU/AU/static/css/index.css
+++ b/backend/AU/AU/static/css/index.css
@@ -701,7 +701,7 @@ footer {
   width: 100%;
   height: auto;
   padding: 50px 100px;
-  background: #111;
+  background: #13304a;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -849,10 +849,10 @@ footer p {
 
 .copyrightText {
   width: 100%;
-  background: #18181818;
+  background: #fd3838;
   padding: 8px 100px;
   text-align: center;
-  color: #999;
+  color: white;
 }
 
 @media (max-width: 991px) {
