--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -69,7 +69,7 @@
             <i class="fa fa-twitter" aria-hidden="true"></i>
           </div>
           <div class="social_icon">
-            <i class="fa fa-google " aria-hidden="true"></i>
+            <i class="fa fa-facebook " aria-hidden="true"></i>
           </div>
         </ul>
       </div>
