--- a/backend/AU/templates/pages/service.html
+++ b/backend/AU/templates/pages/service.html
@@ -19,7 +19,7 @@
             <p class="hero-section-description">{{services.hero_title}}</p>
             <p class="hero-section-description-sub">{{services.hero_slogan}}</p>
             <div class="col-sm">
-                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> {{services.hero_subject_name}} </Strong> or <Strong class="hero-course-title"> {{service.hero_subject_name_I}} </Strong> </p>
+                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> {{services.hero_subject_name}} </Strong> or <Strong class="hero-course-title"> {{services.hero_subject_name_I}} </Strong> </p>
             </div>
             <a href="{% url 'enroll' %}"><button class="hero-join-now-button">{{services.hero_button_name}}</button></a>
         </div>
