--- a/backend/AU/AU/static/css/about.style.css
+++ b/backend/AU/AU/static/css/about.style.css
@@ -23,18 +23,11 @@
   overflow: hidden !important;
 }
 .about-founder {
-  background-color: rgb(188, 191, 203, 0.2);
   position: relative;
   padding-bottom: 100px;
   padding-top: 40px;
   padding-bottom: 10px;
 }
-/* .about-section {
-  overflow: hidden;
-  background: url(../img/img3.jpg) no-repeat left;
-  background-size: 55%;
-  background-color: #fdfdfd;
-} */
 
 .inner-container {
   width: 55%;
@@ -85,7 +78,7 @@
 
 /* Experts */
 .expert-title {
-  font-size: 5rem;
+  font-size: 3rem;
   text-align: center;
   font-family: "SeoulHangang CEB";
   text-transform: uppercase;
@@ -136,17 +129,16 @@
 .counselling {
   padding-top: 70px;
   padding-bottom: 70px;
-  background-color: rgb(188, 191, 203, 0.2);
 }
 
 .book-free-counselling {
-  font-size: 5rem;
+  font-size: 3rem;
   text-align: center;
   font-family: "SeoulHangang CEB";
   text-transform: uppercase;
   font-weight: bold;
   padding-top: 10px !important;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .counselling-description {
@@ -157,7 +149,7 @@
   margin-top: -20px;
 }
 .book-a-session {
-  background-color: darkred;
+  background-color: #eb5757;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -219,7 +211,7 @@
     margin-top: 10px;
   }
   .book-a-session {
-    background-color: darkred;
+    background-color: #eb5757;
     border: none;
     color: white;
     padding: 16px 32px;
