Changing some of the things in services

--- a/backend/AU/templates/partials/footer.html
+++ b/backend/AU/templates/partials/footer.html
@@ -3,13 +3,13 @@
       <div class="sec aboutus">
         <h2>About Us</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, in dignissimos magni eos ullam ab recusandae veritatis minima hic voluptatem itaque laboriosam, debitis quos labore nostrum. Quia impedit cupiditate sequi. <a class="footer-about-read-more" href="{% url 'about' %}">Read More</a>
+          The main objective of this organisation is to provide any aspiring students and their valued parents with authentic, lawful and real life based educational information and services for studying in Australia. Students are advised and encouraged to get counselled by only experienced counsellors who can provide you with genuine and real information that you NEED to study in Australia. Choosing of right course, college or uni and location will surely impact your life style in Australia. <a class="footer-about-read-more" href="{% url 'about' %}">Read More</a>
         </p>
         <ul class="sci">
-          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/tecgroupglobal"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.instagram.com/tecgroup.global/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://twitter.com/TecGroupGlobal1"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="mailto: info@taraeducation.com.au"><i class="fa fa-google" aria-hidden="true"></i></a></li>
         </ul>
       </div>
       <div class="sec quickLinks">
@@ -27,16 +27,21 @@
         <ul class="info">
           <li>
             <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-            <span>647 Linda Street<br>
-            Phoenixville, PA 19460,<br>USA</span>
+            <span>19 Gorakh Marg<br>
+              New Plaza
+              Putalaisadak,<br> Kathmandu-32</span>
           </li>
           <li>
             <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-            <p><a href="tel:12334578">+12 90323213</a></p>
+            <p><a href="tel:4421860">+977-01-4421860</a></p>
+          </li>
+          <li>
+            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+            <p><a href="tel:9810351494">+977-9810 351 494</a></p>
           </li>
           <li>
             <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
-            <p><a href="#">test@gmail.com</a></p>
+            <p><a href="mailto: info@taraeducation.com.au">info@taraeducation.com.au</a></p>
           </li>
         </ul>
       </div>
