Changing some of the things in services

--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -63,13 +63,13 @@
         </ul>
         <ul class="navbar-nav ms-auto social_icons">
           <div class="social_icon">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <a href="https://www.instagram.com/tecgroup.global/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
           <div class="social_icon">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <a href="https://twitter.com/TecGroupGlobal1"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </div>
           <div class="social_icon">
-            <i class="fa fa-facebook " aria-hidden="true"></i>
+           <a href="https://www.facebook.com/tecgroupglobal"><i class="fa fa-facebook " aria-hidden="true"></i></a> 
           </div>
         </ul>
       </div>
