--- a/backend/AU/templates/pages/index.html
+++ b/backend/AU/templates/pages/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
 {% block content %}
+<!-- Messenger Chat Plugin Code -->
+<div id="fb-root"></div>
 <!---Hero slider-->
 <section>
   <div id="modalOverlay">
