Adding Web link

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -48,6 +48,6 @@
     </div>
   </footer>
   <div class="copyrightText d-flex justify-content-between alight-items-center fw-bold">
-    <p>Copyright Ⓒ  TEC GROUP. All rights reserved</p>
-    <p>Design and Developed by GLOBAL IOT</p>
+    <p>Copyright Ⓒ  TEC GROUP GLOBAL. All rights reserved 2021</p>
+    <p>Design and Developed by <a href="https://globaliotnepal.com/index.html">GLOBAL IOT</a></p>
   </div>
