--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -82,47 +82,55 @@
           </form>
         </div>
         <div class="contact-information">
+          <h4>Contact Details of Nepal</h4>
           <p class="contact-details">
             <span class="label phone">
               <i class="fas fa-phone-alt contact-i"></i>
-              Phone<br />
+              Phone :
               +977 - 01 - 2345676
             </span>
           </p>
           <p class="contact-details">
             <span class="label mphone">
               <i class="fas fa-mobile-alt contact-i"></i>
-              Mobile<br />
+              Mobile :
               +977 - 9876746574
-            </span>
-          </p>
-          <p class="contact-details">
-            <span class="label fax">
-              <i class="fas fa-fax fax contact-i"></i>
-              Fax<br />
-              +977 -01 - 9876765
             </span>
           </p>
           <p class="contact-details">
             <span class="label email">
               <i class="fas fa-envelope contact-i"></i>
-              Email<br />
+              Email :
               info@example.com
             </span>
           </p>
           <p class="contact-details">
             <span class="label address">
               <i class="fas fa-map-marker-alt contact-i"></i>
-              Address<br />
+              Address : 
               Thamel, Kathmandu, Nepal
             </span>
           </p>
-
+          <h4>Contact Details of Australia</h4>
           <p class="contact-details">
-            <span class="label post-box">
-              <i class="fas fa-mail-bulk contact-i"></i>
-              P O Box<br />
-              25790, Kathmandu
+            <span class="label mphone">
+              <i class="fas fa-mobile-alt contact-i"></i>
+              Mobile : 
+              +977 - 0422 863 498
+            </span>
+          </p>
+          <p class="contact-details">
+            <span class="label email">
+              <i class="fas fa-envelope contact-i"></i>
+              Email : 
+              info@example.com
+            </span>
+          </p>
+          <p class="contact-details">
+            <span class="label address">
+              <i class="fas fa-map-marker-alt contact-i"></i>
+              Address :
+              Thamel, Kathmandu, Nepal
             </span>
           </p>
         </div>
