--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -49,5 +49,5 @@
   </footer>
   <div class="copyrightText d-flex justify-content-between alight-items-center fw-bold">
     <p>Copyright Ⓒ  TEC GROUP GLOBAL. All rights reserved 2021</p>
-    <p>Design and Developed by <a href="https://globaliotnepal.com/index.html">GLOBAL IOT Nepal</a></p>
+    <p>Design and Developed by  <a class="footer-about-company-link" href="https://globaliotnepal.com/index.html">GLOBAL IOT Nepal</a></p>
   </div>
