--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
     <title>TEC GROUP - Your Best Study Mate!</title>
     <meta property = "og:title" content="TEC GROUP">
     <meta property="keywords" content="{{ keys }}" />
+        <!-- adding icon into web tab -->
+        <link rel="icon" href="{% static '/img/logo.png' %}" />
 </head>
 <body>
 
