Removing Meta Tag

--- a/templates/pages/enroll.html
+++ b/templates/pages/enroll.html
@@ -67,7 +67,7 @@
                 required
               />
               <h1 class="academic-background">ACADEMIC BACKGROUND</h1>
-            <label for="name" class="-form-label font-weight-bold"
+            <label for="qualification" class="-form-label font-weight-bold"
                 >Current Qualification</label
               >
               <input
@@ -75,12 +75,12 @@
                 type="text"
                 class="@error('name') is-invalid @enderror"
                 name="qualification"
-                autocomplete="name"
+                autocomplete="qualification"
                 placeholder="Your Qualification"
                 autofocus
                 required
               />
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="course_complete" class="-form-label font-weight-bold"
                 >Which year was it completed?</label
               >
               <input
@@ -88,12 +88,12 @@
                 type="text"
                 class="@error('name') is-invalid @enderror"
                 name="course_complete"
-                autocomplete="name"
+                autocomplete="course_complete"
                 placeholder="Which year was it completed?"
                 autofocus
                 required
               />
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="gpa" class="-form-label font-weight-bold"
                 >Grade/Percentage/GPA *
                 </label
               >
@@ -107,7 +107,7 @@
                 autofocus
                 required
               />
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="institution" class="-form-label font-weight-bold"
                 >Institution </label
               >
               <input
@@ -121,7 +121,7 @@
                 required
               />
               <h1 class="academic-background">PARENT'S / SPONSOR's DETAILS</h1>
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="parent_name" class="-form-label font-weight-bold"
                 >Name, Occupation, Email and Contact number</label
               >
               <input
@@ -134,7 +134,7 @@
                 autofocus
                 required
               />
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="address" class="-form-label font-weight-bold"
                 >Address</label
               >
               <input
@@ -164,7 +164,7 @@
                   <option>NONE</option>
                  
               </select>
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="scores" class="-form-label font-weight-bold"
                 >If yes, what are your scores in Listening, Reading, Writing and Speaking?</label
               >
               <input
@@ -177,7 +177,7 @@
                 "
                 autofocus
               />
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="planning" class="-form-label font-weight-bold"
                 >If no, when are you planning to take the test?
                 </label
               >
@@ -192,7 +192,7 @@
                 autofocus
               /> 
               <h1 class="academic-background">Further Study Plan </h1> 
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="where_to_study" class="-form-label font-weight-bold"
                 >Where do you intend to study? Name the country and the city.</label
               >
               <input
@@ -205,7 +205,7 @@
                 autofocus
                 required
               /> 
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="preferred_course" class="-form-label font-weight-bold"
                 >Preferred course</label
               >
               <input
@@ -218,7 +218,7 @@
                 autofocus
                 required
               /> 
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="preferred_uni" class="-form-label font-weight-bold"
                 >Preferred Uni or College
                 </label
               >
@@ -234,21 +234,21 @@
                 autofocus
               />
               <h1 class="academic-background">DECLARATION & AGREEMENT</h1>
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="declare" class="-form-label font-weight-bold"
                 >I declare that the information above is correct.                   </label
               >
               <select name="declare">
                   <option>Yes</option>
                   <option>No</option>
               </select>
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="future_use" class="-form-label font-weight-bold"
                 >TEC Group can use my contact for future updates.</label
               >
               <select name="future_use">
                   <option>Yes</option>
                   <option>No</option>
               </select>
-              <label for="name" class="-form-label font-weight-bold"
+              <label for="consult" class="-form-label font-weight-bold"
               >I would like to consult the counsellor on
               </label
             >
@@ -262,7 +262,7 @@
               autofocus
               required
             />
-            <label for="name" class="-form-label font-weight-bold"
+            <label for="know_us" class="-form-label font-weight-bold"
                 >How did you hear about us?                  </label
               >
               <input
