Removing Meta Tag

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -87,28 +87,30 @@
             <span class="label phone">
               <i class="fas fa-phone-alt contact-i"></i>
               Phone :
-              +977 - 01 - 2345676
+              977-01-4421860
             </span>
           </p>
           <p class="contact-details">
             <span class="label mphone">
               <i class="fas fa-mobile-alt contact-i"></i>
               Mobile :
-              +977 - 9876746574
+              +977-9810 351 494
             </span>
           </p>
           <p class="contact-details">
             <span class="label email">
               <i class="fas fa-envelope contact-i"></i>
               Email :
-              info@example.com
+              info@taraeducation.com.au
             </span>
           </p>
           <p class="contact-details">
             <span class="label address">
               <i class="fas fa-map-marker-alt contact-i"></i>
               Address : 
-              Thamel, Kathmandu, Nepal
+              19 Gorakh Marg,
+              New Plaza Putalaisadak,
+              Kathmandu-32
             </span>
           </p>
           <h4>Contact Details of Australia</h4>
@@ -116,21 +118,22 @@
             <span class="label mphone">
               <i class="fas fa-mobile-alt contact-i"></i>
               Mobile : 
-              +977 - 0422 863 498
+              02 - 0422 863 498
             </span>
           </p>
           <p class="contact-details">
             <span class="label email">
               <i class="fas fa-envelope contact-i"></i>
               Email : 
-              info@example.com
+              info@taraeducation.com.au
             </span>
           </p>
           <p class="contact-details">
             <span class="label address">
               <i class="fas fa-map-marker-alt contact-i"></i>
               Address :
-              Thamel, Kathmandu, Nepal
+              Suite 3 - Level 4, 
+              50 Margaret St, Sydney 2000
             </span>
           </p>
         </div>
