Removing Meta Tag

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -85,55 +85,55 @@
           <h4>Contact Details of Nepal</h4>
           <p class="contact-details">
             <span class="label phone">
-              <i class="fas fa-phone-alt contact-i"></i>
-              Phone :
-              977-01-4421860
+              <a href="tel:01-4421860"> <i class="fas fa-phone-alt contact-i"></i>
+                Phone :
+                977-01-4421860</a>
             </span>
           </p>
           <p class="contact-details">
             <span class="label mphone">
-              <i class="fas fa-mobile-alt contact-i"></i>
+              <a href="tel:9810351494"><i class="fas fa-mobile-alt contact-i"></i>
               Mobile :
-              +977-9810 351 494
+              +977-9810 351 494 </a>
             </span>
           </p>
           <p class="contact-details">
             <span class="label email">
-              <i class="fas fa-envelope contact-i"></i>
+              <a href="mailto: info@taraeducation.com.au"><i class="fas fa-envelope contact-i"></i>
               Email :
-              info@taraeducation.com.au
+              info@taraeducation.com.au </a>
             </span>
           </p>
           <p class="contact-details">
             <span class="label address">
-              <i class="fas fa-map-marker-alt contact-i"></i>
+              <a href="#"><i class="fas fa-map-marker-alt contact-i"></i>
               Address : 
               19 Gorakh Marg,
               New Plaza Putalaisadak,
-              Kathmandu-32
+              Kathmandu-32 </a>
             </span>
           </p>
           <h4>Contact Details of Australia</h4>
           <p class="contact-details">
             <span class="label mphone">
-              <i class="fas fa-mobile-alt contact-i"></i>
+              <a href="tel:02 - 0422 863 498"><i class="fas fa-mobile-alt contact-i"></i>
               Mobile : 
-              02 - 0422 863 498
+              02 - 0422 863 498 </a>
             </span>
           </p>
           <p class="contact-details">
             <span class="label email">
-              <i class="fas fa-envelope contact-i"></i>
+              <a href="mailto: info@taraeducation.com.au"><i class="fas fa-envelope contact-i"></i>
               Email : 
-              info@taraeducation.com.au
+              info@taraeducation.com.au</a>
             </span>
           </p>
           <p class="contact-details">
             <span class="label address">
-              <i class="fas fa-map-marker-alt contact-i"></i>
+             <a href="#"><i class="fas fa-map-marker-alt contact-i"></i>
               Address :
               Suite 3 - Level 4, 
-              50 Margaret St, Sydney 2000
+              50 Margaret St, Sydney 2000 </a>
             </span>
           </p>
         </div>
