--- a/templates/pages/visafact.html
+++ b/templates/pages/visafact.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="row">
                     <h2>{{visaDetail.visa_2nd_title}}</h2>
-                    <p>{{visa_2nd_detail}}</p>
+                    <p>{{visaDetail.visa_2nd_detail}}</p>
                 </div>
             </div>
 
