--- a/AU/static/css/service.css
+++ b/AU/static/css/service.css
@@ -1,3 +1,6 @@
+#services {
+  margin-top: 25px;
+}
 .row {
   --bs-gutter-x: 0rem !important;
   --bs-gutter-y: 0;
@@ -14,15 +17,10 @@
   margin-top: 6rem;
   position: relative;
 }
-.hero-section-title {
-  color: cadetblue;
-  margin-top: 30px;
-  padding-left: 30px;
-}
 .hero-section-description {
   padding-left: 40px;
   font-size: 1.5rem;
-  margin-top: 8rem;
+  margin-top: 15rem;
 }
 .hero-section-description-sub {
   padding-left: 40px;
