--- a/templates/pages/bloginside.html
+++ b/templates/pages/bloginside.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="fb-like" data-href="http://127.0.0.1:8000/blog/{{blog.blog_id}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
               </div>
-              <img class="w-100" src="{{blogdetails.blog_image.url}}" />
+              <img class="w-100" src="{{blogdetails.blog_image.url}}" alt="{{blogdetails.blog_tag}}" />
               <p>{{blogdetails.blog_describe}}</p>
             </div>
           </div>
