Removing Meta Tag

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -36,7 +36,11 @@
             <p><a href="tel:4421860">+977-01-4421860</a></p>
           </li>
           <li>
-            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+            <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
+            <p><a href="tel:02 - 0422 863 498">02 - 0422 863 498</a></p>
+          </li>
+          <li>
+            <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
             <p><a href="tel:9810351494">+977-9810 351 494</a></p>
           </li>
           <li>
