--- a/templates/pages/bloginside.html
+++ b/templates/pages/bloginside.html
@@ -23,7 +23,7 @@
                     <i class="fas fa-user-alt" aria-hidden="true"></i>
                     <span>{{blogdetails.author}}</span>
                 </div>
-                <div class="fb-like" data-href="https://tecgroup.herokuapp.com/blog/{% url 'blogs' blog.id %}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
+                <div class="fb-like" data-href="https://tecgroup.herokuapp.com/blog/{{blogdetails.blog_id}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
               </div>
               <img class="w-100" src="{{blogdetails.blog_image.url}}" alt="{{blogdetails.blog_tag}}" />
               <p>{{blogdetails.blog_describe}}</p>
