Changing the footer description

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -52,6 +52,7 @@
     </div>
   </footer>
   <div class="copyrightText d-flex justify-content-between alight-items-center fw-bold">
-    <p>Copyright Ⓒ  TEC GROUP GLOBAL. All rights reserved 2021</p>
+    <!-- Copyright Ⓒ -->
+    <p>TEC Group Global © 2021. All rights reserved.</p>
     <p>Design and Developed by  <a class="footer-about-company-link" href="https://globaliotnepal.com/index.html" target="_blank">GLOBAL IOT Nepal</a></p>
   </div>
