--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -86,17 +86,17 @@
         <div class="row">
           <div class="col-lg single-fact">
             <i class="fa fa-university fa-3x" aria-hidden="true"></i>
-            <h2 class="count" data-target="200">200</h2>
+            <h2 class="count" data-target="10">10</h2>
             <p>Affiliated University</p>
           </div>
           <div class="col-lg single-fact">
             <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
-            <h2 class="count" data-target="200">100</h2>
+            <h2 class="count" data-target="1000">1000+</h2>
             <p>Graduated</p>
           </div>
           <div class="col-lg single-fact">
             <i class="fa fa-shield fa-3x" aria-hidden="true"></i>
-            <h2 class="count" data-target="200">100</h2>
+            <h2 class="count" data-target="100">100+</h2>
             <p>People applied successfully</p>
           </div>
         </div>
@@ -250,7 +250,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg">
-          <div class="section-title"><h2>Our Universities</h2></div>
+          <div class="section-title"><h2>Our Partner University</h2></div>
         </div>
       </div>
        <section class="customer-logos slider">
